creates basic background for the game

--- a/game.html
+++ b/game.html
@@ -9,7 +9,17 @@
     <title>Defend the Tower!</title>
 </head>
 <body>
-    <h1>game</h1>
-
+    <
+    <div class = battlefield>
+        <div class = wall>
+            <div class = shooter></div>
+        </div>
+        <div class = lanes>
+            <div class = lane></div>
+            <div class = lane></div>
+            <div class = lane></div>
+        </div>
+    </div>
+    
 </body>
 </html>
