adds function for timer lives, and enemy

--- a/game.html
+++ b/game.html
@@ -9,9 +9,13 @@
     <title>Defend the Tower!</title>
 </head>
 <body>
-    <
+    <div class = info>
+        <div id = score>Score:</div>
+        <div id = timer></div>
+        <div id = lives></div>
+    </div>
     <div class = battlefield>
-        <div class = wall>
+        <div id = wall>
             <div class = shooter></div>
         </div>
         <div class = lanes>
@@ -19,7 +23,7 @@
             <div class = lane></div>
             <div class = lane></div>
         </div>
-    </div>
+    </div> 
     
 </body>
 </html>
