--- a/landing.html
+++ b/landing.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src = "./script.js"></script>
     <link rel = "stylesheet" href = "./style.css">
+    <link rel="stylesheet" href="https://unpkg.com/papercss@1.8.2/dist/paper.min.css">
     <title>Defend the Tower!</title>
 </head>
 <body>
