changing from displayflex to canvas to make enemy movement easier

--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
     <title>Defend the Tower!</title>
 </head>
 <body>
-    <div class = info>
+    <!-- <div class = info>
         <div id = score>Score:</div>
         <div id = timer></div>
         <div id = lives></div>
@@ -23,7 +23,7 @@
             <div class = lane></div>
             <div class = lane></div>
         </div>
-    </div> 
-    
+    </div>  -->
+    <canvas id = "canvas1"> </canvas>
 </body>
 </html>
