adding gameboard grid so there are multiple rows enemies can walk on

--- a/game.html
+++ b/game.html
@@ -24,6 +24,11 @@
             <div class = lane></div>
         </div>
     </div>  -->
+    <div class = info>
+        <div id = score>Score:</div>
+        <div id = timer></div>
+        <div id = lives></div>
+    </div>
     <canvas id = "canvas1"> </canvas>
 </body>
 </html>
