adds background and changes button type and fonts for landing page and instruction page

--- a/game.html
+++ b/game.html
@@ -6,24 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src = "/script.js"></script>
     <link rel = "stylesheet" href = "/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/papercss@1.8.2/dist/paper.min.css">
     <title>Defend the Tower!</title>
 </head>
 <body>
-    <!-- <div class = info>
-        <div id = score>Score:</div>
-        <div id = timer></div>
-        <div id = lives></div>
-    </div>
-    <div class = battlefield>
-        <div id = wall>
-            <div class = shooter></div>
-        </div>
-        <div class = lanes>
-            <div class = lane></div>
-            <div class = lane></div>
-            <div class = lane></div>
-        </div>
-    </div>  -->
     <div class = info>
         <div id = score>Score:</div>
         <div id = timer></div>
