--- a/instructions.html
+++ b/instructions.html
@@ -6,17 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src = "/script.js"></script>
     <link rel = "stylesheet" href = "/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/papercss@1.8.2/dist/paper.min.css">
     <title>Defend the Tower! Instructions</title>
 </head>
 <body>
-    <h1 class = "instruction">Instructions</h1>
-    <p>In this game, the user's goal is to prevent enemies, entering from the left side of the screen, from reaching the castle walls, located at the right side of the screen. The user plays as an archer in first person view and fires arrows (using the cursor to click) to hit enemies as they advance toward the castle walls. Each enemy will have a certain number of hitpoints while the user's arrows will deal a certain number of damage. If the enemy's hitpoints are equal to or less than zero, the enemy dies. 
-    <br><br>
-    Each game will take <span>5 minutes</span>. The castle walls will have <span>5 lives</span>. If an enemy reaches the walls, the castle walls will take one life. If the castle walls reach 0 lives, you lose the game. If you do not lose the game within 5 minutes, you win.
-    </p>
-
-    <div>
-        <a href = "./landing.html"><button>Back</button></a>
+    <div class = "page">
+        <h1 class = "instruction">Instructions</h1>
+        <p>In this game, the user's goal is to prevent enemies, entering from the left side of the screen, from reaching the castle walls, located at the right side of the screen. The user plays as an archer in first person view and fires arrows (using the cursor to click) to hit enemies as they advance toward the castle walls. Each enemy will have a certain number of hitpoints while the user's arrows will deal a certain number of damage. If the enemy's hitpoints are equal to or less than zero, the enemy dies. 
+        <br><br>
+        Each game will take <span>5 minutes</span>. The castle walls will have <span>5 lives</span>. If an enemy reaches the walls, the castle walls will take one life. If the castle walls reach 0 lives, you lose the game. If you do not lose the game within 5 minutes, you win.
+        </p>
+        <div>
+            <a href = "./landing.html"><button>Back</button></a>
+        </div>
     </div>
 </body>
 </html>
