--- a/landing.html
+++ b/landing.html
@@ -10,10 +10,12 @@
     <title>Defend the Tower!</title>
 </head>
 <body>
-    <h1 class = "title">Defend the Tower!</h1>
-    <div>
-        <a href = "./game.html"><button>Start</button></a>
-        <a href = "./instructions.html"><button>Instructions</button></a>
-    </div>
+    <div class = "page">
+        <h1 class = "title">Defend the Tower!</h1>
+        <div>
+            <a href = "./game.html"><button>Start</button></a>
+            <a href = "./instructions.html"><button>Instructions</button></a>
+        </div>
+    </canvas>
 </body>
 </html>
