--- a/instructions.html
+++ b/instructions.html
@@ -12,9 +12,12 @@
 <body>
     <div class = "page">
         <h1 class = "instruction">Instructions</h1>
-        <p>In this game, the user's goal is to prevent enemies, entering from the left side of the screen, from reaching the castle walls, located at the right side of the screen. The user plays as an archer in first person view and fires arrows (using the cursor to click) to hit enemies as they advance toward the castle walls. Each enemy will have a certain number of hitpoints while the user's arrows will deal a certain number of damage. If the enemy's hitpoints are equal to or less than zero, the enemy dies. 
-        <br><br>
-        Each game will take <span>5 minutes</span>. The castle walls will have <span>5 lives</span>. If an enemy reaches the walls, the castle walls will take one life. If the castle walls reach 0 lives, you lose the game. If you do not lose the game within 5 minutes, you win.
+        <p> You are a wizard stopping ogres from storming your castle! <br><br>
+            1. You have <span>three</span> minutes to protect your castle from being destoyed.<br>
+            2. Use your cursor to aim your spells at the ogres. each spell can only kill one ogre. <br>
+            3. One point is added for each ogre killed <br>
+            4. You have <span>five</span> lives. Lose one life for every ogre that enters the castle. <br>
+            5. Don't lose all lives in three minutes to win!
         </p>
         <div>
             <a href = "./landing.html"><button>Back</button></a>
